Added generation of a json file for each source file including local calls. Todo: add external calls

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,7 @@
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(CMAKE_BUILD_TYPE Debug)
+
+option(USE_CXX_EXCEPTIONS "Enable C++ exception support" ON)
+
 add_subdirectory(c)
 add_subdirectory(cpp)
