Added directories dirA and dirB

--- a/tests/test_local_callgraph_several_files/CMakeLists.txt
+++ b/tests/test_local_callgraph_several_files/CMakeLists.txt
@@ -5,8 +5,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Wl,-Map=mytest.map")
 
+include_directories("." "dirA" "dirB")
+
 add_executable(mytest
-  A.cpp
-  B.cpp
+  dirA/A.cpp
+  dirB/B.cpp
   test.cpp
   )
