--- a/tests/test_stl_code/CMakeLists.txt
+++ b/tests/test_stl_code/CMakeLists.txt
@@ -7,3 +7,17 @@ add_executable(test_std_set
 
 add_executable(test_std_map
   test_std_map.cpp)
+
+add_executable(test_std_map1
+  test_std_map1.cpp)
+
+add_executable(test_std_map2
+  test_std_map2.cpp)
+
+add_executable(test_std_map3
+  test_std_map3.cpp)
+
+set_target_properties(test_std_map2 test_std_map3
+  PROPERTIES
+  COMPILE_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11"
+)
