1) Take into account all function calls where callers and calles are outside the current source file under analysis 2) Add a bug report regarding the handling of external templates (See tests/test_stl_code/callers_bug_extern_templates/README.txt for more information)

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -11,8 +11,10 @@ include_directories(..)
 
 add_clang_executable(callers
   callers.cpp
-  ../visitor.cpp
-  ../CallersData.cpp
+  # ../visitor.cpp
+  # ../CallersData.cpp
+  /home/hbalp/work/src/llvm/trunk/tools/clang/tools/extra/callers/visitor.cpp
+  /home/hbalp/work/src/llvm/trunk/tools/clang/tools/extra/callers/CallersData.cpp
   )
 
 target_compile_options(callers PRIVATE -fexceptions)
