--- a/tests/test_stl_code/CMakeLists.txt
+++ b/tests/test_stl_code/CMakeLists.txt
@@ -30,16 +30,16 @@ add_executable(test_std_map
 #    template class std::map<std::string, int>;
 #
 
-# add_executable(test_std_map1
-#   test_std_map1.cpp)
+add_executable(test_std_map1
+  test_std_map1.cpp)
 
-# add_executable(test_std_map2
-#   test_std_map2.cpp)
+add_executable(test_std_map2
+  test_std_map2.cpp)
 
-# add_executable(test_std_map3
-#   test_std_map3.cpp)
+add_executable(test_std_map3
+  test_std_map3.cpp)
 
-# set_target_properties(test_std_map2 test_std_map3
-#   PROPERTIES
-#   COMPILE_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11"
-# )
+set_target_properties(test_std_map2 test_std_map3
+  PROPERTIES
+  COMPILE_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11"
+)
