Added a new class C child of class A to test support of virtual functions

--- a/tests/test_local_callgraph_several_files/CMakeLists.txt
+++ b/tests/test_local_callgraph_several_files/CMakeLists.txt
@@ -5,10 +5,11 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Wl,-Map=mytest.map")
 
-include_directories("." "dirA" "dirB")
+include_directories("." "dirA" "dirB" "dirC")
 
 add_executable(mytest
   dirA/A.cpp
   dirB/B.cpp
+  dirC/C.cpp
   test.cpp
   )
