--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -28,6 +28,7 @@ target_link_libraries(callers
   clangStaticAnalyzerFrontend
   clangTooling
   boost_filesystem
+  boost_regex
   boost_system
   )
 
