--- a/tests/test_local_callgraph_several_files/CMakeLists.txt
+++ b/tests/test_local_callgraph_several_files/CMakeLists.txt
@@ -1,9 +1,8 @@
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-#set(LINKER_FLAG "-Map mytest.map")
-
-set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Wl,-Map=mytest.map")
+set(CMAKE_BUILD_TYPE Debug)
+set(LINKER_FLAG "-Map mytest.map")
+#set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Wl,-Map=mytest.map")
 
 include_directories("." "dirA" "dirB" "dirC")
 
