Corrected calls between files in the generated .callgraph model

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories(..)
 
 add_clang_executable(callers
   callers.cpp
+  ../utilities.cpp
   ../visitor.cpp
   ../CallersData.cpp
   #/home/hbalp/work/src/llvm/trunk/tools/clang/tools/extra/callers/visitor.cpp
