--- a/tests/test_threading/CMakeLists.txt
+++ b/tests/test_threading/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_BUILD_TYPE Debug)
 set(LINKER_FLAG "-Map test_threading.map")
 #set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Wl,-Map=test_threading.map")
 
-include_directories(".")
+include_directories("." "/usr/include")
 
 add_executable(test_threading
   test_threading.c
