Test ok in C and C++

--- a/tests/test_dataflow/CMakeLists.txt
+++ b/tests/test_dataflow/CMakeLists.txt
@@ -4,5 +4,6 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 
+# add_executable(test_dataflow test_dataflow.c)
 add_executable(test_dataflow test_dataflow.cpp)
 
