Added gdb backtrace facilities for debugging and corrected usage of fct_def.decl_file

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -5,7 +5,7 @@ set(LLVM_LINK_COMPONENTS
 
 #option(USE_CXX_EXCEPTIONS "Enable C++ exception support" ON)
 
-#set (CMAKE_CXX_FLAGS "-fexceptions")
+#set(CMAKE_CXX_FLAGS "-fexceptions")
 
 include_directories(..)
 
@@ -13,11 +13,15 @@ add_clang_executable(callers
   callers.cpp
   ../visitor.cpp
   ../CallersData.cpp
+  ../gdb_backtrace.cpp
   #/home/hbalp/work/src/llvm/trunk/tools/clang/tools/extra/callers/visitor.cpp
   #/home/hbalp/work/src/llvm/trunk/tools/clang/tools/extra/callers/CallersData.cpp
   )
 
 target_compile_options(callers PRIVATE -fexceptions)
+
+#set_target_properties(callers PROPERTIES COMPILE_FLAGS "-fexceptions")
+#set_target_properties(callers PROPERTIES CXX_FLAGS "-fexceptions")
 
 target_link_libraries(callers
   clangAST
