--- a/tests/test_saml_sign/CMakeLists.txt
+++ b/tests/test_saml_sign/CMakeLists.txt
@@ -4,6 +4,6 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 
-add_executable(test_saml_sign test_saml_sign.c)
-# add_executable(test_saml_sign test_saml_sign.cpp)
+# add_executable(test_saml_sign test_saml_sign.c)
+add_executable(test_saml_sign test_saml_sign.cpp)
 
