Added parsing of xml files form test_libxml

--- a/tests/test_saml_sign/CMakeLists.txt
+++ b/tests/test_saml_sign/CMakeLists.txt
@@ -4,6 +4,10 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 
-# add_executable(test_saml_sign test_saml_sign.c)
-add_executable(test_saml_sign test_saml_sign.cpp)
+include_directories("/data/balp/src/tools/exec/include/libxml2")
+
+add_executable(test_saml_sign test_saml_sign.c)
+# add_executable(test_saml_sign test_saml_sign.cpp)
+
+target_link_libraries(test_saml_sign /data/balp/src/tools/exec/lib/libxml2.so)
 
