Completed test_samal_sign and adde test_gdb_instrum

--- a/tests/test_odr/CMakeLists.txt
+++ b/tests/test_odr/CMakeLists.txt
@@ -1,4 +1,7 @@
 
+# add debug symbols
+set(CMAKE_BUILD_TYPE Debug)
+
 #include_directories(.)
 
 add_executable(test_odr application.cpp library.cpp)
