Activate or not the adapted calling context

--- a/tests/test_saml_sign/validate_saml_sign.h.in
+++ b/tests/test_saml_sign/validate_saml_sign.h.in
@@ -1,6 +1,10 @@
 #ifndef _VALIDATE_SAML_SIGN_H_
 #define _VALIDATE_SAML_SIGN_H_
 
+#define ON  1
+#define OFF 0
+
+//#define MANUAL_CALLING_CONTEXT @MANUAL_CALL_CONTEXT@
 #define ADAPTED_CALL_CONTEXT @ADAPTED_CALL_CONTEXT@
 
 bool
