--- a/tests/test_saml_sign/validate_saml_sign.h.in
+++ b/tests/test_saml_sign/validate_saml_sign.h.in
@@ -4,8 +4,9 @@
 #define ON  1
 #define OFF 0
 
-//#define MANUAL_CALLING_CONTEXT @MANUAL_CALL_CONTEXT@
-#define ADAPTED_CALL_CONTEXT @ADAPTED_CALL_CONTEXT@
+#define ADAPTED_CALL_CONTEXT    @ADAPTED_CALL_CONTEXT@
+#define USE_XML_MEM_TRACE       @USE_XML_MEM_TRACE@
+#define USE_XML_MEM_BREAKPOINT  @USE_XML_MEM_BREAKPOINT@
 
 bool
 saml_SignatureProfileValidator_validate(signaturePtr sign, xmlDocPtr doc);
