Updated test_saml_sign and script libxml2_install.sh to separate gdb and fc_va configs

--- a/tests/test_fc_builtins/CMakeLists.txt
+++ b/tests/test_fc_builtins/CMakeLists.txt
@@ -14,15 +14,16 @@ option(FRAMA_C "Option to activate Frama-C VA analysis" ON)
 # save temporary files when needed
 if(FRAMA_C)
 #option(SAVE_TEMPS "Save temporary files" ON)
-set(CMAKE_C_FLAGS " -save-temps -C -D__FC_MACHDEP_X86_64")
-set(CMAKE_CXX_FLAGS " -save-temps -C")
+set(CMAKE_C_FLAGS " -save-temps -C -DFRAMA_C -D__FC_MACHDEP_X86_64")
+set(CMAKE_CXX_FLAGS " -save-temps -C -DFRAMA_C ")
 endif()
 
 # add path to header files
 if(FRAMA_C)
   # frama-c -print-share-path
+  include_directories("/tools/exec/share/frama-c/libc")
   # include_directories("/opt/stance/share/frama-c/libc")
-  include_directories("/home/hbalp/ocamlbrew/ocaml-4.02.3/.opam/system/share/frama-c/libc")
+  # include_directories("/home/hbalp/ocamlbrew/ocaml-4.02.3/.opam/system/share/frama-c/libc")
 else()
   include_directories("/usr/include")
 endif()
@@ -31,4 +32,4 @@ endif()
 #add_executable(test_assert test_assert.c)
 #add_executable(test_stdio test_stdio.c)
 #add_executable(test_pp-annot test_pp-annot.c)
-add_executable(test_malloc test_malloc.c)
+add_executable(test_malloc test_malloc.c stdlib.c)
