Reached precise Frama-C Value Analysis of test_saml_sign on one single Unitary Test

--- a/tests/test_fc_builtins/CMakeLists.txt
+++ b/tests/test_fc_builtins/CMakeLists.txt
@@ -8,12 +8,15 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_BUILD_TYPE Debug)
 
 # option to activate Frama-C analysis
-#option(FRAMA_C "Option to activate Frama-C VA analysis" OFF)
-option(FRAMA_C "Option to activate Frama-C VA analysis" ON)
+option(FRAMA_C "Option to activate Frama-C VA analysis" OFF)
+#option(FRAMA_C "Option to activate Frama-C VA analysis" ON)
 
 # save temporary files when needed
 if(FRAMA_C)
-#option(SAVE_TEMPS "Save temporary files" ON)
+  #option(SAVE_TEMPS "Save temporary files" ON)
+  # WARNING: do not try to use the Frama_C_memcpy builtin function
+  # cf http://lists.gforge.inria.fr/pipermail/frama-c-discuss/2009-December/001644.html
+  #set(CMAKE_C_FLAGS " -save-temps -C -DFRAMA_C -D__FC_USE_BUILTIN__ -D__FC_MACHDEP_X86_64")
 set(CMAKE_C_FLAGS " -save-temps -C -DFRAMA_C -D__FC_MACHDEP_X86_64")
 set(CMAKE_CXX_FLAGS " -save-temps -C -DFRAMA_C ")
 endif()
@@ -32,4 +35,5 @@ endif()
 #add_executable(test_assert test_assert.c)
 #add_executable(test_stdio test_stdio.c)
 #add_executable(test_pp-annot test_pp-annot.c)
-add_executable(test_malloc test_malloc.c stdlib.c)
+#add_executable(test_malloc test_malloc.c stdlib.c)
+add_executable(test_memcpy test_memcpy.c)
